Hold the Jagex session in the system keychain and ship native installers
The session store writes one keychain entry instead of creds.json; the
launcher refuses to start without a keychain. Releases add an MSI, a deb
and an AppImage. The tray shows the bolt icon, as a template on macOS.
The README keeps the end-user steps; docs/ holds the rest.